third_party/move/move-compiler-v2/tests/ability-check/v1-typing/instantiate_signatures.exp

Diagnostics:
error: type `R` is missing required ability `drop`
   ┌─ tests/ability-check/v1-typing/instantiate_signatures.move:11:15
   │
 3 │     struct S<T: drop> has drop { f: T }
   │              - declaration of type parameter `T`
   ·
11 │         f1: S<R>,
   │               ^
   │
   = required by instantiating type parameter `T:drop` of struct `S`

error: reference type `&u64` is not allowed as a type argument
   ┌─ tests/ability-check/v1-typing/instantiate_signatures.move:12:15
   │
 3 │     struct S<T: drop> has drop { f: T }
   │              - declaration of type parameter `T`
   ·
12 │         f2: S<&u64>,
   │               ^^^^
   │
   = required by instantiating type parameter `T:drop` of struct `S`

error: reference to a reference is not allowed
   ┌─ tests/ability-check/v1-typing/instantiate_signatures.move:13:13
   │
13 │         f3: &(&u64),
   │             ^^^^^^^

error: reference type `&&u64` is not allowed as a field type
   ┌─ tests/ability-check/v1-typing/instantiate_signatures.move:13:13
   │
13 │         f3: &(&u64),
   │             ^^^^^^^
   │
   = required by declaration of field `f3`

error: tuple type `(u64, u64)` is not allowed as a type argument
   ┌─ tests/ability-check/v1-typing/instantiate_signatures.move:14:15
   │
 3 │     struct S<T: drop> has drop { f: T }
   │              - declaration of type parameter `T`
   ·
14 │         f4: S<(u64, u64)>,
   │               ^^^^^^^^^^
   │
   = required by instantiating type parameter `T:drop` of struct `S`

error: type `R` is missing required ability `drop`
   ┌─ tests/ability-check/v1-typing/instantiate_signatures.move:18:16
   │
 3 │     struct S<T: drop> has drop { f: T }
   │              - declaration of type parameter `T`
   ·
18 │         _f1: S<R>,
   │                ^
   │
   = required by instantiating type parameter `T:drop` of struct `S`

error: reference type `&u64` is not allowed as a type argument
   ┌─ tests/ability-check/v1-typing/instantiate_signatures.move:19:16
   │
 3 │     struct S<T: drop> has drop { f: T }
   │              - declaration of type parameter `T`
   ·
19 │         _f2: S<&u64>,
   │                ^^^^
   │
   = required by instantiating type parameter `T:drop` of struct `S`

error: reference to a reference is not allowed
   ┌─ tests/ability-check/v1-typing/instantiate_signatures.move:20:14
   │
20 │         _f3: &(&u64),
   │              ^^^^^^^

error: tuple type `(u64, u64)` is not allowed as a type argument
   ┌─ tests/ability-check/v1-typing/instantiate_signatures.move:21:16
   │
 3 │     struct S<T: drop> has drop { f: T }
   │              - declaration of type parameter `T`
   ·
21 │         _f4: S<(u64, u64)>,
   │                ^^^^^^^^^^
   │
   = required by instantiating type parameter `T:drop` of struct `S`

error: type `R` is missing required ability `drop`
   ┌─ tests/ability-check/v1-typing/instantiate_signatures.move:28:11
   │
 3 │     struct S<T: drop> has drop { f: T }
   │              - declaration of type parameter `T`
   ·
28 │         S<R>,
   │           ^
   │
   = required by instantiating type parameter `T:drop` of struct `S`

error: reference type `&u64` is not allowed as a type argument
   ┌─ tests/ability-check/v1-typing/instantiate_signatures.move:29:11
   │
 3 │     struct S<T: drop> has drop { f: T }
   │              - declaration of type parameter `T`
   ·
29 │         S<&u64>,
   │           ^^^^
   │
   = required by instantiating type parameter `T:drop` of struct `S`

error: reference to a reference is not allowed
   ┌─ tests/ability-check/v1-typing/instantiate_signatures.move:30:9
   │
30 │         &(&u64),
   │         ^^^^^^^

error: tuple type `(u64, u64)` is not allowed as a type argument
   ┌─ tests/ability-check/v1-typing/instantiate_signatures.move:31:11
   │
 3 │     struct S<T: drop> has drop { f: T }
   │              - declaration of type parameter `T`
   ·
31 │         S<(u64, u64)>,
   │           ^^^^^^^^^^
   │
   = required by instantiating type parameter `T:drop` of struct `S`

error: type `R` is missing required ability `drop`
   ┌─ tests/ability-check/v1-typing/instantiate_signatures.move:37:19
   │
 3 │     struct S<T: drop> has drop { f: T }
   │              - declaration of type parameter `T`
   ·
37 │         let f1: S<R> = abort 0;
   │                   ^
   │
   = required by instantiating type parameter `T:drop` of struct `S`

error: reference type `&u64` is not allowed as a type argument
   ┌─ tests/ability-check/v1-typing/instantiate_signatures.move:38:19
   │
 3 │     struct S<T: drop> has drop { f: T }
   │              - declaration of type parameter `T`
   ·
38 │         let f2: S<&u64> = abort 0;
   │                   ^^^^
   │
   = required by instantiating type parameter `T:drop` of struct `S`

error: reference to a reference is not allowed
   ┌─ tests/ability-check/v1-typing/instantiate_signatures.move:39:17
   │
39 │         let f3: &(&u64) = abort 0;
   │                 ^^^^^^^

error: tuple type `(u64, u64)` is not allowed as a type argument
   ┌─ tests/ability-check/v1-typing/instantiate_signatures.move:40:19
   │
 3 │     struct S<T: drop> has drop { f: T }
   │              - declaration of type parameter `T`
   ·
40 │         let f4: S<(u64, u64)> = abort 0;
   │                   ^^^^^^^^^^
   │
   = required by instantiating type parameter `T:drop` of struct `S`

error: reference to a reference is not allowed
   ┌─ tests/ability-check/v1-typing/instantiate_signatures.move:44:12
   │
44 │         id<&(&u64)>(abort 0);
   │            ^^^^^^^

error: reference type `&&u64` is not allowed as a type argument
   ┌─ tests/ability-check/v1-typing/instantiate_signatures.move:44:12
   │
 5 │     fun id<T>(x: T): T { x }
   │            - declaration of type parameter `T`
   ·
44 │         id<&(&u64)>(abort 0);
   │            ^^^^^^^
   │
   = required by instantiating type parameter `T` of function `id`

error: type `R` is missing required ability `drop`
   ┌─ tests/ability-check/v1-typing/instantiate_signatures.move:47:11
   │
 3 │     struct S<T: drop> has drop { f: T }
   │              - declaration of type parameter `T`
   ·
47 │         S<S<R>> { f: abort 0 };
   │           ^^^^
   │
   = required by instantiating type parameter `T:drop` of struct `S`
   = required by instantiating type parameter `T:drop` of struct `S`

error: reference to a reference is not allowed
   ┌─ tests/ability-check/v1-typing/instantiate_signatures.move:49:11
   │
49 │         S<&(&u64)> { f: abort 0 };
   │           ^^^^^^^
